--- a/auto-update/sigma-axis.yaml
+++ b/auto-update/sigma-axis.yaml
@@ -36,3 +36,27 @@
     regex:
       find: ^v(.*)$
       replace: $1
+- Identifier: toggle-layers
+  Developer: sigma-axis
+  Enable: true
+  Type: GitHub
+  Owner: sigma-axis
+  Repository: aviutl_toggle_layers
+  Asset: ^aviutl_toggle_layers-.*\.zip$
+  Version:
+    from: tag_name
+    regex:
+      find: ^v(.*)$
+      replace: $1
+- Identifier: reactive-dlg
+  Developer: sigma-axis
+  Enable: true
+  Type: GitHub
+  Owner: sigma-axis
+  Repository: aviutl_reactive_dlg
+  Asset: ^aviutl_reactive_dlg-.*\.zip$
+  Version:
+    from: tag_name
+    regex:
+      find: ^v(.*)$
+      replace: $1
