競合関係を追加

--- a/manifests/hebiiro/Ultimate/r13.yaml
+++ b/manifests/hebiiro/Ultimate/r13.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r13
 ReleaseDate: 2023-12-15
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 2901
 Developer:
 - hebiiro
