--- a/manifests/hebiiro/Ultimate/r16.yaml
+++ b/manifests/hebiiro/Ultimate/r16.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r16
 ReleaseDate: 2024-01-05
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 3062
 Developer:
 - hebiiro
