--- a/manifests/hebiiro/Ultimate/r25.yaml
+++ b/manifests/hebiiro/Ultimate/r25.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r25
 ReleaseDate: 2024-05-28
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 10008
 Developer:
 - hebiiro
