--- a/manifests/hebiiro/Ultimate/r26.yaml
+++ b/manifests/hebiiro/Ultimate/r26.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r26
 ReleaseDate: 2024-05-29
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 10007
 Developer:
 - hebiiro
