--- a/manifests/hebiiro/Ultimate/r1.yaml
+++ b/manifests/hebiiro/Ultimate/r1.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r1
 ReleaseDate: 2023-09-13
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 618
 Developer:
 - hebiiro
