--- a/manifests/hebiiro/Ultimate/r10.yaml
+++ b/manifests/hebiiro/Ultimate/r10.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r10
 ReleaseDate: 2023-12-08
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1701
 Developer:
 - hebiiro
