--- a/manifests/hebiiro/Ultimate/r11.yaml
+++ b/manifests/hebiiro/Ultimate/r11.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r11
 ReleaseDate: 2023-12-09
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1742
 Developer:
 - hebiiro
