--- a/manifests/hebiiro/Ultimate/r12.yaml
+++ b/manifests/hebiiro/Ultimate/r12.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r12
 ReleaseDate: 2023-12-13
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 2899
 Developer:
 - hebiiro
