--- a/manifests/hebiiro/Ultimate/r14.yaml
+++ b/manifests/hebiiro/Ultimate/r14.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r14
 ReleaseDate: 2023-12-30
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 2942
 Developer:
 - hebiiro
