--- a/manifests/hebiiro/Ultimate/r15.yaml
+++ b/manifests/hebiiro/Ultimate/r15.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r15
 ReleaseDate: 2023-12-31
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 3031
 Developer:
 - hebiiro
