--- a/manifests/hebiiro/Ultimate/r19.yaml
+++ b/manifests/hebiiro/Ultimate/r19.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r19
 ReleaseDate: 2024-02-12
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 3417
 Developer:
 - hebiiro
