--- a/manifests/hebiiro/Ultimate/r2.yaml
+++ b/manifests/hebiiro/Ultimate/r2.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r2
 ReleaseDate: 2023-09-16
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1367
 Developer:
 - hebiiro
