--- a/manifests/hebiiro/Ultimate/r24.yaml
+++ b/manifests/hebiiro/Ultimate/r24.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r24
 ReleaseDate: 2024-05-27
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 9966
 Developer:
 - hebiiro
