--- a/manifests/hebiiro/Ultimate/r28.yaml
+++ b/manifests/hebiiro/Ultimate/r28.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r28
 ReleaseDate: 2024-06-01
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 10339
 Developer:
 - hebiiro
