--- a/manifests/hebiiro/Ultimate/r4.yaml
+++ b/manifests/hebiiro/Ultimate/r4.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r4
 ReleaseDate: 2023-09-16
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1375
 Developer:
 - hebiiro
