--- a/manifests/hebiiro/Ultimate/r5.yaml
+++ b/manifests/hebiiro/Ultimate/r5.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r5
 ReleaseDate: 2023-09-17
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1557
 Developer:
 - hebiiro
