--- a/manifests/hebiiro/Ultimate/r6.yaml
+++ b/manifests/hebiiro/Ultimate/r6.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r6
 ReleaseDate: 2023-09-26
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1690
 Developer:
 - hebiiro
