--- a/manifests/hebiiro/Ultimate/r8.yaml
+++ b/manifests/hebiiro/Ultimate/r8.yaml
@@ -6,6 +6,7 @@ DisplayName: アルティメットプラグイン
 Version: r8
 ReleaseDate: 2023-11-27
 Section: Plugin/Other
+Conflicts: MaxWnd
 InstalledSize: 1681
 Developer:
 - hebiiro
