競合関係を修正 文法が間違っていたため

--- a/manifests/hebiiro/Ultimate/r1.yaml
+++ b/manifests/hebiiro/Ultimate/r1.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r1
 ReleaseDate: 2023-09-13
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 618
 Developer:
 - hebiiro
