--- a/manifests/hebiiro/Ultimate/r26.yaml
+++ b/manifests/hebiiro/Ultimate/r26.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r26
 ReleaseDate: 2024-05-29
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 10007
 Developer:
 - hebiiro
