--- a/manifests/hebiiro/Ultimate/r3.yaml
+++ b/manifests/hebiiro/Ultimate/r3.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r3
 ReleaseDate: 2023-09-16
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 1369
 Developer:
 - hebiiro
