--- a/manifests/hebiiro/Ultimate/r10.yaml
+++ b/manifests/hebiiro/Ultimate/r10.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r10
 ReleaseDate: 2023-12-08
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 1701
 Developer:
 - hebiiro
