--- a/manifests/hebiiro/Ultimate/r15.yaml
+++ b/manifests/hebiiro/Ultimate/r15.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r15
 ReleaseDate: 2023-12-31
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 3031
 Developer:
 - hebiiro
