--- a/manifests/hebiiro/Ultimate/r17.yaml
+++ b/manifests/hebiiro/Ultimate/r17.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r17
 ReleaseDate: 2024-01-19
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 3357
 Developer:
 - hebiiro
