--- a/manifests/hebiiro/Ultimate/r20.yaml
+++ b/manifests/hebiiro/Ultimate/r20.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r20
 ReleaseDate: 2024-02-18
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 3418
 Developer:
 - hebiiro
