--- a/manifests/hebiiro/Ultimate/r21.yaml
+++ b/manifests/hebiiro/Ultimate/r21.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r21
 ReleaseDate: 2024-02-18
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 3432
 Developer:
 - hebiiro
