--- a/manifests/hebiiro/Ultimate/r22.yaml
+++ b/manifests/hebiiro/Ultimate/r22.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r22
 ReleaseDate: 2024-05-25
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 9025
 Developer:
 - hebiiro
