--- a/manifests/hebiiro/Ultimate/r24.yaml
+++ b/manifests/hebiiro/Ultimate/r24.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r24
 ReleaseDate: 2024-05-27
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 9966
 Developer:
 - hebiiro
