--- a/manifests/hebiiro/Ultimate/r28.yaml
+++ b/manifests/hebiiro/Ultimate/r28.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r28
 ReleaseDate: 2024-06-01
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 10339
 Developer:
 - hebiiro
