--- a/manifests/hebiiro/Ultimate/r9.yaml
+++ b/manifests/hebiiro/Ultimate/r9.yaml
@@ -6,7 +6,8 @@ DisplayName: アルティメットプラグイン
 Version: r9
 ReleaseDate: 2023-12-04
 Section: Plugin/Other
-Conflicts: MaxWnd
+Conflicts: 
+- MaxWnd
 InstalledSize: 1701
 Developer:
 - hebiiro
